<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".pages.auth.login.LoginActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:textSize="32sp"
        android:textColor="@color/blue_electric_900"
        android:textStyle="bold"
        android:gravity="center"
        android:text="@string/app_name"/>

    <com.rilodev.test.d2dapps.core.ui.customview.EditTextEmail
        android:id="@+id/input_email"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="16dp"
        android:drawablePadding="8dp"
        android:hint="@string/enter_your_email"
        android:paddingHorizontal="16dp"
        android:textColorHint="@color/text_color_hint" />

    <include
        android:id="@+id/input_password"
        layout="@layout/input_password_with_visibility_layout"/>

    <com.rilodev.test.d2dapps.core.ui.customview.ButtonCommon
        android:id="@+id/btn_sign_in"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="32dp"
        android:layout_marginHorizontal="16dp"
        android:text="@string/tv_sign_in" />

    <Space
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <TextView
        android:id="@+id/btn_create_new_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="16dp"
        android:gravity="bottom"
        android:text="@string/tv_create_new_account" />

</LinearLayout>